feat: improve workspace user experience
